--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 NODE_ENV="development"
-SERVER_URL="https://eshrm-backend.jcode.my.id"
-FRONTEND_URL="https://eshrm.jcode.my.id"
-LBPH_URL="https://api.jcode.my.id/api/recognize"
+SERVER_URL="http://localhost:5000"
+FRONTEND_URL="http://localhost:5173"
+LBPH_URL="http://localhost:8000/api/recognize"
 
 MONGO_URI=""
 DATABASE_NAME="eshrm"
