--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
+  "file-type": "^18.0.0",
     "nodemon": "^3.1.11",
     "redis": "^5.8.0"
   }
